# app/internal/entity/blog_entity.go
@@ -1,0 +1,13 @@
+package entity
+
+import "time"
+
+type Blog struct {
+	ID        int       `gorm:"primaryKey;autoIncrement" json:"id"`
+	Title     string    `gorm:"type:varchar(255);not null" json:"title"`
+	Content   string    `gorm:"type:text;not null" json:"content"`
+	AuthorID  int       `gorm:"not null" json:"author_id"`
+	Author    User      `gorm:"foreignKey:AuthorID" json:"author"`
+	CreatedAt time.Time `gorm:"autoCreateTime" json:"created_at"`
+	UpdatedAt time.Time `gorm:"autoUpdateTime" json:"updated_at"`
+}
